--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vscode-jest-runner",
+  "name": "vscode-jest-runner-dummy",
   "displayName": "Jest Runner",
   "description": "Simple way to run or debug a single (or multiple) tests from context-menu",
-  "version": "0.4.48",
-  "publisher": "firsttris",
-  "author": "Tristan Teufel",
+  "version": "0.0.1",
+  "publisher": "cdaringe",
+  "author": "chris dieringer",
   "repository": {
     "type": "git",
     "url": "https://github.com/firsttris/vscode-jest-runner.git"
