--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,6 @@ jobs:
       - run: npm run build --if-present
       - run: npm run test-compile
       - run: npm run test
-      - run: npm run publish
+      - run: npm run deploy
+        env:
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
